--- a/addons/sourcemod/translations/WeaponRestrict.phrases.txt
+++ b/addons/sourcemod/translations/WeaponRestrict.phrases.txt
@@ -169,7 +169,7 @@
 	
 	"assaultsuit"
 	{
-		"en"		"Vest and Helmet"
+		"en"		"Vest & Helmet"
 		"ru"		"Бронежилет и шлем"
 		"ua"		"Бронежилет і шолом" // Шалом! :D
 	}
@@ -215,7 +215,7 @@
 	
 	"taser"
 	{
-		"en"		"Taser"
+		"en"		"Zeus x27"
 		"ru"		"Электрошокер"
 		"ua"		"Электрошокер" 
 	}
@@ -402,6 +402,7 @@
 	{
 		"#format"	"{1:i}"
 		"en"		"is currently restricted to {1} for Terrorists and cannot be bought."
+		"pt"		"está atualmente restrito a {1} para Terroristas e não pode ser comprado."
 		"ru"		"запрещен в количестве {1} для Террористов и не может быть куплен."
 		"ua"		"заборонено в кількості {1} для Терористів й не може бути куплений."
 	}
@@ -409,7 +410,8 @@
 	"IsRestrictedBuyCT"
 	{
 		"#format"	"{1:i}"
-		"en"		"is currently restricted to {1} for Counter-Terrorists and cannot be bought."	
+		"en"		"is currently restricted to {1} for Counter-Terrorists and cannot be bought."
+		"pt"		"está atualmente restrito a {1} para Contra-Terroristas e não pode ser comprado."
 		"ru"		"запрещен в количестве {1} для Контр-Террористов и не может быть куплен."
 		"ua"		"заборонено в кількості {1} для Контр-Терористів й не може бути куплений."
 	}
@@ -417,7 +419,8 @@
 	"IsRestrictedPickupT"
 	{
 		"#format"	"{1:i}"
-		"en"		"is currently restricted to {1} for Terrorists and cannot be picked up."	
+		"en"		"is currently restricted to {1} for Terrorists and cannot be picked up."
+		"pt"		"está atualmente restrito a {1} para Terroristas e não pode ser recuperado."
 		"ru"		"запрещен в количестве {1} для Террористов и не может быть подобран."
 		"ua"		"заборонено в кількості {1} для Терористів й не може бути піднятий."
 	}
@@ -426,14 +429,16 @@
 	{
 		"#format"	"{1:i}"
 		"en"		"is currently restricted to {1} for Counter-Terrorists and cannot be picked up."
-		"ru"		"запрещен в количестве {1} для Контр-Террористов и не может быть подобран."	
-		"ua"		"заборонено в кількості {1} для Контр-Терористів й не може бути піднятий."	
+		"pt"		"está atualmente restrito a {1} para Contra-Terroristas e não pode ser recuperado."
+		"ru"		"запрещен в количестве {1} для Контр-Террористов и не может быть подобран."
+		"ua"		"заборонено в кількості {1} для Контр-Терористів й не може бути піднятий."
 	}
 	
 	"Refunded"
 	{
 		"#format"	"{1:i}"
 		"en"		"You have been refunded ${1} for"
+		"pt"		"Você recebeu ${1} do reembolso por"
 		"ru"		"Вам возмещено ${1} за"
 		"ua"		"Вам повернено ${1} за"
 	}
@@ -527,6 +532,7 @@
 	"UnrestrictReply"
 	{
 		"en"		"sm_unrestrict <weapon|all|group> <both|ct|t>"
+		"pt"		"sm_unrestrict <weapon|all|group> <both|ct|t>"
 		"ru"		"sm_unrestrict <оружие|all|группа> <кол-во> <both|ct|t>"
 		"ua"		"sm_unrestrict <зброя|all|група> <кол-во> <both|ct|t>"
 	}
@@ -618,6 +624,7 @@
 	"CounterTerrorists"
 	{
 		"en"		"Counter-Terrorists"
+		"pt"		"Counter-Terrorists"
 		"ru"		"Контр-Террористы"
 		"ua"		"Контр-Терористи"
 	}
@@ -625,6 +632,7 @@
 	"Terrorists"
 	{
 		"en"		"Terrorists"
+		"pt"		"Terrorists"
 		"ru"		"Террористы"
 		"ua"		"Терористи"
 	}
