--- a/addons/sourcemod/translations/WeaponRestrict.phrases.txt
+++ b/addons/sourcemod/translations/WeaponRestrict.phrases.txt
@@ -171,7 +171,7 @@
 	{
 		"en"		"Vest & Helmet"
 		"ru"		"Бронежилет и шлем"
-		"ua"		"Бронежилет і шолом" // Шалом! :D
+		"ua"		"Бронежилет і шолом"
 	}
 	
 	"nvgs"
@@ -636,6 +636,7 @@
 		"ru"		"Террористы"
 		"ua"		"Терористи"
 	}
+	
 	"Allteams"
 	{
 		"en"		"Both Teams"
